Fix Layout bug from hidden button
But was not visible on the UI, but the keyboard could still tab across it, causing layout issues from this hidden element

--- a/ncoover-website/src/components/portfolio/project-card/ProjectCard.module.css
+++ b/ncoover-website/src/components/portfolio/project-card/ProjectCard.module.css
@@ -87,6 +87,6 @@
 }
 
 .displayNone {
-	transition: display 2.3s ease;
+	transition: display 2.3 ease;
 	display: none;
 }
